@startuml

class VigiSenado{
SENADO: Lista()
----
CrearLista()
Comparar()
BuscarP()
BuscarC()
MostrarPartidos()
MostrarSenadores()
}

class Congresista{
Nombre: str
Genero: str
AñoNacimiento: str
CiudadNacimiento: str
PartidoP: str
nVotos: str
correo: str
redes: str
----
next: None
prev: None
child: Congresista()
----
}

class Partido{
nombreP: str
fechaFundacion: str
presidente: str
posicion: str
eslogan: str
nSenadores: int
porcentaje: str
----
next: Partido()
prev: Partido()
child: Congresista()
----
}

class Lista{
head: Partido()
tail: Partido()
----
__repr__()
insertP()
insertC()
}

VigiSenado *-- Lista
Lista *-- Partido
Partido *-- Congresista

@enduml
